<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name"> FactoryTest </string>
    <string name="title_activity_factory_test"> factoryTest </string>
    <string name="title_activity_phone_test"> Phone </string>
    <string name="title_activity_vibate_test"> Motor </string>
    <string name="title_activity_LCD_test"> LCD </string>
    <string name="title_activity_camera_test"> Camera </string>
    <string name="title_activity_fmradio_test"> FMRadio </string>
    <string name="title_activity_LoudSpeaker_test"> LoudSpeak </string>
    <string name="title_activity_EarPhone_test"> headphones </string>
    <string name="title_activity_SDCard_test"> SD/Mem </string>
    <string name="title_activity_key_test"> Key(light)</string>
    <string name="title_activity_Speaker_test"> Receiver </string>
    <string name="title_activity_BackLight_test"> BackLight </string>
    <string name="title_activity_Mic_test"> Headset  </string>
    <string name="title_activity_SimCard_test"> SIM </string>
    <string name="title_activity_BT_test"> Bluetooth </string>
    <string name="title_activity_WIFI_test"> WIFI </string>
    <string name="title_activity_buttonlight_test"> key light </string>
    <string name="title_activity_tp_test"> TP </string>
    <string name="title_activity_all_test"> Test Results </string>
    <string name="title_activity_battery_test"> Battery </string>
    <string name="title_activity_memory_test"> Memory </string>
    <string name="title_activity_sensor_test"> Sensor </string>
    <string name="title_activity_gps_test">Gps</string>
    <string name="title_activity_infrared_test">Infrared</string>
    <string name="title_activity_otg_test">OTG</string>
    <string name="Button_Test_OTG">OTG</string>
    <string name="title_activity_hardware_info">HardwareInfomation</string>
    <string name="Button_Test_banben"> Version: </string>
    <string name="Button_Test_jiaozhun"> Has been calibrated: </string>
    <string name="testall_res"> pass all : </string>
    <string name="msg_shi"> Yes </string>
    <string name="msg_fou"> No </string>
    <string name="Button_Test_All"> Test All </string>
    <string name="Button_Test_LCD"> LCD/BL </string>
    <string name="Button_Test_LCD_without_BL"> LCD </string>
    <string name="Button_Test_MainCamera"> Camera </string>
    <string name="Button_Test_DeputyCamera"> DeputyCamera </string>
    <string name="Button_Test_SubCamera"> SubCamera </string>
    <string name="Button_Test_TP"> TP</string>
    <string name="Button_Test_Battery"> Battery </string>
    <string name="Button_Test_Key"> Key(Light)</string>
    <string name="Button_Test_LoudSpeaker">LoudSpk</string>
    <string name="Button_Test_Mic"> headset </string>
    <string name="Button_Test_earphone"> headphones </string>
    <string name="Button_Test_FMRadio"> FMRadio </string>
    <string name="Button_Test_Speaker"> Receiver </string>
    <string name="Button_Test_Gps">GPS</string>
    <string name="Button_Test_Infrared">Infrared</string>
    <string name="Button_Test_BlueTooth"> BlueTooth </string>
    <string name="Button_Test_Vibrate"> Motor </string>
    <string name="Button_Test_Phone"> Phone </string>
    <string name="Button_Test_BackLight"> BackLight </string>
    <string name="Button_Test_ButtonLight"> Key Light </string>
    <string name="Button_Test_Flash"> Flash </string>
    <string name="Button_Test_SDcard"> SD/Mem </string>
    <string name="Button_Test_SIMcard"> SIM </string>
    <string name="Button_Test_WIFI"> WIFI </string>
    <string name="Button_Test_Gsensor"> Gsensor </string>
    <string name="Button_Test_ALSPS"> ALS / PSsensor </string>
    <string name="Button_Test_NEICUN"> Memory </string>
    <string name="Button_Status_Success"> Success </string>
    <string name="Button_Status_Fail"> Failed </string>
    <string name="LCD_NEXT"> next </string>
    <string name="Button_Test_Sensor"> Sensor </string>
    <string name="msg_title"> headphones </string>
    <string name="msg_masse"> Please insert the headset again! </string>
    <string name="msg_masse_no"> Please Pull out  the headset again!</string>
    <string name="msg_ok"> OK </string>
    <string name="msg_sdcard"> SD card does not exist </string>
    <string name="msg_sdcard_new"> SD card is not exist, Mic test failed! </string>
    <string name="msg_record"> Recording ... </string>
    <string name="msg_recordstop"> Recording stops ... </string>
    <string name="msg_stoprecord"> Stop recording </string>
    <string name="msg_play"> Play </string>
    <string name="msg_playstop"> stop playback </string>
    <string name="msg_recordrun"> Playing ... </string>
    <string name="msg_sensor_alps"> Please covered the up of the screen </string>
    <string name="msg_shanguang"> Flash test ... </string>
    <string name="msg_shexiang"> Camera test ... </string>
    <string name="msg_shanguang_ok"> Flash testing.Please Press The CameraButton </string>
    <string name="msg_shexiang_ok"> Camera test finish. </string>
    <string name="msg_vibrate_text"> Motor tests: \nFeeling the Phone body vibrate Judge whether the motor is effectively </string>
    <string name="msg_sim">SIM Status:</string>
    <string name="msg_sim1"> SIM1 Status: </string>
    <string name="msg_sim2"> SIM2 Status: </string>
   <string name="msg_sim_state"> Good condition, available </string>
    <string name="msg_sim_stateno"> Unable to obtain SIM status </string>
    <string name="msg_1"> No card </string>
    <string name="msg_2"> Unknown status </string>
    <string name="msg_3"> Need NetworkPIN unlock </string>
    <string name="msg_4"> Require a PIN to unlock </string>
    <string name="msg_5"> Need the PUK to unlock </string>
    <string name="msg_6"> Good </string>
    <string name="msg_camera_erro"> Flash test failing! </string>
    <string name="msg_bton"> search for Bluetooth </string>
    <string name="msg_btoff"> Off Bluetooth </string>
    <string name="msg_btname"> Bluetooth name: </string>
    <string name="msg_btvalue"> Bluetooth Address: </string>
    <string name="msg_btwait"> Bluetooth closing, please wait try again... </string>
    <string name="msg_wifion"> Open WIFI </string>
    <string name="msg_wifioff"> Close WIFI </string>
    <string name="msg_wifien"> WIFI available </string>
    <string name="msg_wifidis"> WIFI unavailable </string>
    <string name="msg_buttonon"> Key lights on </string>
    <string name="msg_buttonoff"> Key lights off </string>
    <string name="values_sd1"> SDCard Exists: </string>
    <string name="values_sd2"> SDCard Path: </string>
    <string name="values_sd3"> Package path: </string>
    <string name="values_sd4"> Create the file: </string>
    <string name="values_sd5"> Delete files successfully: </string>
    <string name="values_sd6"> Read the file: </string>
    <string name="values_sd7"> SDCard test results: </string>
    <string name="values_mic_e"> Headset microphone test: is recording ... </string>
    <string name="values_mic_e1"> Headset microphone test: recording is complete!(4s) ... </string>
    <string name="values_mic_e2"> Headset microphone test: is Playing ... </string>
    <string name="values_mic_e3"> Headset microphone test is complete!. </string>
    <string name="values_mic"> Mobile Mic Test: is recording ... </string>
    <string name="values_mic_2"> Mobile Mic Test: is Playing ... </string>
    <string name="values_mic_7"> Mobile Mic test: recording is complete!(4s) ... </string>
    <string name="values_mic_3"> Mobile Mic test is complete!. </string>
    <string name="values_mic_test"> Mic </string>
    <string name="values_infrared_control_test">Infrared control test ...</string>
    <string name="values_mic_1"> Mobile Mic test is completed! </string>
    <string name="values_loud"> LoudSpeaker Testing ... </string>
    <string name="values_loud_2"> LoudSpeaker test is completed! </string>
    <string name="values_sp"> Speaker Testing ... </string>
    <string name="values_sp_2"> Speaker Test is completed! </string>
    <string name="test_report"> Test Report </string>
    <string name="values_main2"> Exit Test </string>
    <string name="Large_Text"> SDCard error </string>
    <string name="values_is"> values ​​is </string>
   <string name="values_success"> Test success: </string>
   <string name="values_fail"> Test failed: </string>
   <string name="values_bk_msg"> Backlight Test: Observe the backlight brightness changes </string>
   <string name="values_bklight"> increases </string>
    <string name="values_light"> Reduced </string>
   <string name="values_menu"> Menu </string>
    <string name="values_main"> Home </string>
    <string name="values_return"> Back </string>
    <string name="values_volueup"> Volume + </string>
    <string name="values_voluedown"> Volume - </string>
    <string name="values_record"> Start recording </string>
    <string name="values_power"> Power </string>
    <string name="values_camera"> Capture </string>
    <string name="values_mada"> Motor Testing ... </string>
    <string name="values_sao"> Scan Network </string>
    <string name="values_lanya"> detect Bluetooth: </string>
    <string name="values_dakai"> open Wifi </string>
    <string name="values_guanbi"> Close Wifi </string>
    <string name="values_vzhuangt"> Wifi status </string>
    <string name="values_dangqian"> Scanning Wifi network: </string>
    <string name="battery_info_status_label"> Battery Status: </string>
    <string name="battery_info_scale_label"> Total battery percentage: </string>
    <string name="battery_info_level_label"> Current battery percentage: </string>
    <string name="battery_info_health_label"> Battery Health Level: </string>
    <string name="battery_info_voltage_label"> Battery voltage: </string>
    <string name="battery_info_temperature_label"> Battery temperature: </string>
    <string name="battery_info_uptime"> The boot length: </string>
	<string name="ageing_test">The aging test</string>
	<string name="turn_off_loud_speaker">"Turn off loudSpeaker"</string>
	<string name="turn_off_speaker">"Turn off receiver"</string>
	<string name="turn_off_mic">"Stop record and play it"</string>
	<string name="turn_off_vibrate">"Turn off vibrate"</string>
	<string name="turn_on_camera">"Turn on camera"</string>
	<string name="turn_off_flash">"Turn off flash"</string>
	<string name="turn_off_lcd">"Turn off lcd"</string>
	<string name="Button_Test_Fingerprint">"Fingerprint"</string>
	<string name="battery_info_current_voltage">Charger Voltage : </string>
	<string name="battery_info_current_electronicl">Charger Electronic: </string>
	<string name="Button_Status_Test"> Hall Test </string>
	<string name="msg_Hall_text"> Hall tests: \nPlease click the button and wait 3 seconds </string>
    <string name="front_camera">front camera</string>
    <string name="Test_LCD">LCD</string>
    <string name="other">其他</string>
    <string name="show">显示</string>
    <string name="title_grid_fragment">宫格视图</string>
    <string name="title_list_fragment">列表视图</string>
    <string name="test_exit">exit</string>
    <string name="led_test"> led  </string>
    <string name="msensor_test"> mseonsor </string>
    <string name="otg_test"> OTG </string>
    <string name="masterflash_test">back flash</string>
    <string name="secondflash_test">front flash</string>
    <string name="master_camera">master camera</string>
    <string name="title_lcmlight_test"> lcm light </string>
    <string name="key_test_desc">please press this keys</string>
    <string name="volumn_up">volumn up</string>
    <string name="volumn_down">volumn down</string>
    <string name="key_sos">smart key</string>
    <string name="key_back"> back </string>
    <string name="key_home">home</string>
    <string name="gy_sensor_test">GySensor</string>
    <string name="assist_camera">assist camera</string>
</resources>