<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/Button_buttonon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_buttonon" />
    <Button
        android:id="@+id/Button_buttonoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Button_buttonon"
        android:text="@string/msg_buttonoff" />
    
    <Button
        android:id="@+id/Button_Success"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/Button_Fail"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:textSize="25dip"
        android:text="@string/Button_Status_Success" />

    <Button
        android:id="@+id/Button_Fail"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="25dip"
        android:text="@string/Button_Status_Fail" />

</RelativeLayout>