<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/Settings/assets/res/any/layout/battery_info.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->
<!-- <LinearLayout android:layout_width="fill_parent" android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android" 
                    android:orientation="vertical"> -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
    style="@style/info_layout"
    android:layout_height="420dp"
    android:orientation="vertical" >

    <!-- Battery Status -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_status_label" style="@style/info_label" />
        <TextView android:id="@+id/status" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Level -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_level_label" style="@style/info_label" />
        <TextView android:id="@+id/level" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Scale -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_scale_label" style="@style/info_label" />
        <TextView android:id="@+id/scale" style="@style/info_value" />
    </LinearLayout>
    
    <!-- Battery Health -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_health_label" style="@style/info_label" />
        <TextView android:id="@+id/health" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Voltage -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_voltage_label" style="@style/info_label" />
        <TextView android:id="@+id/voltage" style="@style/info_value" />
    </LinearLayout>

    <!-- pingyh add  start-->
    <LinearLayout style="@style/entry_layout"
    	android:id="@+id/current_voltage"
    	android:visibility="gone">
        <TextView android:text="@string/battery_info_current_voltage" style="@style/info_label" />
        <TextView android:id="@+id/current_mv" style="@style/info_value" />
	</LinearLayout>
	
    <LinearLayout style="@style/entry_layout"
    	android:id="@+id/current_electronicl"
    	android:visibility="gone">
        <TextView android:text="@string/battery_info_current_electronicl" style="@style/info_label" />
        <TextView android:id="@+id/current_ma" style="@style/info_value" />
    </LinearLayout>
    <!-- pingyh add  start-->

    <!-- Battery Temperature -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_temperature_label" style="@style/info_label" />
        <TextView android:id="@+id/temperature" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Technology -->

    <!-- Uptime -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_uptime" style="@style/info_label" />
        <TextView android:id="@+id/uptime" style="@style/info_value" />
    </LinearLayout>
    
    <!-- LogRecordTimeSetting -->

    


</LinearLayout>
    <RelativeLayout
        android:id="@+id/RV_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/Button_Success"
            android:layout_width="150dip"
            android:layout_height="60dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bk_true"
            android:textSize="25dip"
            android:text="@string/Button_Status_Success" />

        <Button
            android:id="@+id/Button_Fail"
            android:layout_width="150dip"
            android:layout_height="60dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bk_fail"
            android:textSize="25dip"
            android:text="@string/Button_Status_Fail" />
    </RelativeLayout>
<!-- <RelativeLayout

            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button_Success"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:textSize="25dip"
                android:text="@string/Button_Status_Success" />

            <Button
                android:id="@+id/Button_Fail"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textSize="25dip"
                android:text="@string/Button_Status_Fail" />

</RelativeLayout>
 -->
<!-- </LinearLayout> -->
</RelativeLayout>