<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key_test_desc"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/volume_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/volumn_up"/>
        <Button
            android:id="@+id/volume_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/volumn_down"/>

        <Button
            android:id="@+id/key_sos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/key_sos"
            android:visibility="visible"/>
        <LinearLayout
            android:id="@+id/navigation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            >
            <Button
                android:id="@+id/key_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/key_back"/>
            <ImageView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:scaleType="center"
                android:src="@color/ivory"/>
            <Button
                android:id="@+id/key_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/key_home"/>
            <!--<ImageView-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:scaleType="center"-->
                <!--android:src="@color/ivory"/>-->
            <!--<Button-->
                <!--android:id="@+id/key_menu"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:text="@string/key_menu"/>-->

        </LinearLayout>


        <Button
            android:id="@+id/Button_Fail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="22sp"
            android:text="@string/Button_Status_Fail"/>

    </LinearLayout>



</RelativeLayout>