<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/RV_button_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
	    android:id="@+id/msg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/msg_Hall_text"
            android:textSize="25dp"/>
        <Button
            android:id="@+id/Button_Test"
            android:layout_width="150dip"
            android:layout_height="60dip"
	    android:layout_gravity="center"
            android:background="@drawable/bk_press"
            android:textSize="25dip"
            android:text="@string/Button_Status_Test" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RV_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/Button_Success"
            android:layout_width="150dip"
            android:layout_height="60dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bk_true"
            android:textSize="25dip"
            android:text="@string/Button_Status_Success" />

        <Button
            android:id="@+id/Button_Fail"
            android:layout_width="150dip"
            android:layout_height="60dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bk_fail"
            android:textSize="25dip"
            android:text="@string/Button_Status_Fail" />
    </RelativeLayout>

</RelativeLayout>
